@@ -425,6 +425,7 @@ aecu.contentUpgradeBuilder()
 #### Update Single-value Properties
 
 * doSetProperty(String name, Object value): sets the given property to the value. Any existing value is overwritten.
+* doSetProperty(String name, Object value, String pathToSubnode): sets the given property in the subnode to the value. Any existing value is overwritten.
 * doDeleteProperty(String name): removes the property with the given name if existing.
 * doRenameProperty(String oldName, String newName): renames the given property if existing. If the new property name already exists it will be overwritten.
 
@@ -433,6 +434,7 @@ aecu.contentUpgradeBuilder()
         .forChildResourcesOf("/content/we-retail/ca/en")
         .filterByNodeName("jcr:content")
         .doSetProperty("name", "value")
+        .doSetProperty("name", "value", "root/breadCrumb")
         .doDeleteProperty("nameToDelete")
         .doRenameProperty("oldName", "newName")
         .run()
