@@ -1,5 +1,5 @@
 /*
- * Copyright 2018 - 2021 Valtech GmbH
+ * Copyright 2018 - 2022 Valtech GmbH
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
  * associated documentation files (the "Software"), to deal in the Software without restriction,
@@ -207,6 +207,16 @@ public interface ContentUpgrade {
      * @return upgrade object
      **/
     ContentUpgrade doSetProperty(String name, Object value);
+
+    /**
+     * Sets a property value on a subnode.
+     *
+     * @param name          property name
+     * @param value         property value
+     * @param pathToSubnode path to subnode where property will be set
+     * @return upgrade object
+     **/
+    ContentUpgrade doSetProperty(String name, Object value, String pathToSubnode);
 
     /**
      * Joins a property value into a single value. Uses "," to join multiple values. Deletes
